DIGIHUB-73659 Corrected test data

--- a/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
@@ -8,5 +8,5 @@ values:
   category: "OLT"
   operationalState: "WORKING"
   lifecycleState: "OPERATING"
-  type: "A4_SPINE-Switch_v1"
+  type: "A4_OLT_v1"
   plannedMatNr: "123456" # if psl called will be overwritten
