--- a/osr-data/data/a4resourceinventory/networkelements/networkElementB.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/networkElementB.yml
@@ -3,10 +3,10 @@ template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElement
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NE
   vpsz: "49/${randomLong, 1000, 9999}/0"
-  fsz: "7KH0"
+  fsz: "7KDA"
   klsId: "1234567"
-  category: "OLT"
+  category: "SPINE_SWITCH"
   operationalState: "WORKING"
   lifecycleState: "OPERATING"
-  type: "A4_OLT_v1"
-  plannedMatNr: "42999900"
+  type: "A4_SPINE-Switch_v1"
+  plannedMatNr: "42999901"
