Resolve DIGIHUB-69053 Refactor upiter data

--- a/upiter-data/data/credentials/DTAGTelekomNSOOpsRW.yml
+++ b/upiter-data/data/credentials/DTAGTelekomNSOOpsRW.yml
@@ -1,4 +1,4 @@
-name: RHSSOAccessManagementSupportUi
+name: RHSSOTelekomNSOOpsRW
 template: com.tsystems.tm.acc.ta.data.osr.models.Credentials
 values:
   login: "andrei_k"
