--- a/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
@@ -3,5 +3,5 @@ template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementPort
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEP
   operationalState: "WORKING"
-  functionalPortLabel: "LogicalLabel_${scope, global.a4Provisioning.portNumber}"
+  functionalPortLabel: "${scope, global.a4Provisioning.portNumber}"
   type: "" # if blank: field will be filled
