--- a/osr-data/data/dpucommissioning/DefaultOlt.yml
+++ b/osr-data/data/dpucommissioning/DefaultOlt.yml
@@ -3,5 +3,7 @@ template: com.tsystems.tm.acc.ta.data.osr.models.OltDevice
 values:
   vpsz: "49/30/1234"
   fsz: "76H1"
-  oltPort: "0"
-  oltSlot: "19"
+  oltPort: "1"
+  oltSlot: "4"
+  uplinkSlot: "5"
+  uplinkPort: "3"
