DIGIHUB-74628 Fallback of mappers to old swagger version

--- a/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
@@ -4,4 +4,4 @@ values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEP
   operationalState: "WORKING"
   functionalPortLabel: "GPON_${scope, global.a4Provisioning.portNumber}"
-  type: "" # if blank: field will be filled
+  type: "GPON" # if blank: field will be filled
