--- a/osr-data/data/a4resourceinventory/networkelements/networkElementOperatingBor01.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/networkElementOperatingBor01.yml
@@ -1,13 +1,13 @@
-name: networkElementInstallingOlt01
+name: networkElementOperatingBor01
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElement
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NE
   vpsz: "49/1198/0"
-  fsz: "7KDA"
+  fsz: "7KCA"
   klsId: "1234567"
-  category: "OLT"
-  operationalState: "NOT_WORKING"
-  lifecycleState: "INSTALLING"
-  type: "A4_OLT_v1"
+  category: "BOR"
+  operationalState: "WORKING"
+  lifecycleState: "Operating"
+  type: "A4_POD_BOR_v1"
   plannedMatNr: "42999900"
-  planningDeviceName: "dmst.olt.1"
+  planningDeviceName: "	dmst.bor.1"
