--- a/osr-data/data/a4resourceinventory/networkelements/networkElementOperatingBor01.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/networkElementOperatingBor01.yml
@@ -7,7 +7,7 @@ values:
   klsId: "1234567"
   category: "BOR"
   operationalState: "WORKING"
-  lifecycleState: "Operating"
+  lifecycleState: "OPERATING"
   type: "A4_POD_BOR_v1"
   plannedMatNr: "42999900"
   planningDeviceName: "dmst.bor.1"
