DIGIHUB-75057 add logs everywhere

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,15 @@
                 <log.access.strategy>OC</log.access.strategy>
             </properties>
         </profile>
+        <profile>
+            <id>gigabit-tm-berlinium-01</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <log.access.strategy>OC</log.access.strategy>
+            </properties>
+        </profile>
     </profiles>
 
     <repositories>
