--- a/osr-data/data/commissioning/EndSz_49_30_179_71G0_SDX2221.yml
+++ b/osr-data/data/commissioning/EndSz_49_30_179_71G0_SDX2221.yml
@@ -1,17 +1,17 @@
 name: EndSz_49_30_179_71G0_SDX2221
 template: com.tsystems.tm.acc.ta.data.osr.models.DpuDevice
 values:
-  vpsz: "49/30/179/"
+  vpsz: "49/30/179"
   fsz: "71G0"
-  oltEndsz: "49/911/1100/76H1"
-  oltGponSlot: "1"
-  oltGponPort: "0"
+  oltEndsz: "49/30/179/76H1"
+  oltGponSlot: "3"
+  oltGponPort: "3"
+  bngEndsz: "49/30/179/43G2"
   bezeichnung: "SDX2221-16-TP"
   typ: "SDX2221-16-TP"
   hersteller: "ADTRAN"
   klsId: "12223344"
   seriennummer: "SN123123123"
-  firmwareVersion: "SDX5600V800R016C00"
   ipAdresse: "10.182.125.196"
   ponConnectionWe: "1"
   ponConnectionGe: "0"
