--- a/osr-data/data/a10nsp/checkLineIdA10nspNotFound.yml
+++ b/osr-data/data/a10nsp/checkLineIdA10nspNotFound.yml
@@ -1,5 +1,5 @@
 name: checkLineIdA10nspNotFound
-template: com.tsystems.tm.acc.ta.data.osr.models.CheckLineIdA10nsp
+template: com.tsystems.tm.acc.ta.data.osr.models.A10nspCheckData
 values:
   oltEndSz: "49/30/179/76H1"
   bngEndSz: "49/911/84/7ZJB"
