--- a/osr-data/data/a10nsp/findA10NspByEndSzListNotFound.yml
+++ b/osr-data/data/a10nsp/findA10NspByEndSzListNotFound.yml
@@ -1,5 +1,5 @@
 name: findA10NspByEndSzListNotFound
-template: com.tsystems.tm.acc.ta.data.osr.models.CheckLineIdA10nsp
+template: com.tsystems.tm.acc.ta.data.osr.models.A10nspCheckData
 values:
   oltEndSz: "49/30/179/76H5"
   oltEndSz2: "49/30/179/76H6"
