--- a/osr-data/data/a4resourceinventory/networkelements/networkElementPlanningLeafSwitch01.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/networkElementPlanningLeafSwitch01.yml
@@ -8,6 +8,6 @@ values:
   category: "LEAF_SWITCH"
   operationalState: "NOT_WORKING"
   lifecycleState: "PLANNING"
-  type: "A4_LEAF-Switch_v1"
-  plannedMatNr: "42999902"
+  type: "A4-LEAF-Switch-v1"
+  plannedMatNr: "40945513"
   planningDeviceName: "dmst.leaf.3"
