--- a/osr-data/data/rebell/defaultUeweg.yaml
+++ b/osr-data/data/rebell/defaultUeweg.yaml
@@ -2,5 +2,5 @@ name: defaultUeweg
 template: com.tsystems.tm.acc.ta.data.osr.models.UewegData
 values:
   uewegId: "${randomLong, 100000, 999999}, ${randomLong, 100000, 999999}"
-  vendorPortNameA: "10G/0"
-  vendorPortNameB: "10GE-2"
+  vendorPortNameA: "10 GE-1"
+  vendorPortNameB: "1"
