--- a/osr-data/data/a4resourceinventory/networkelementgroups/defaultNetworkElementGroup.yml
+++ b/osr-data/data/a4resourceinventory/networkelementgroups/defaultNetworkElementGroup.yml
@@ -3,5 +3,5 @@ template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementGroup
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEG
   name: "NEG-${randomLong, 100000, 999999}" # if blank: random name will be generated and field will be filled with that value
-  operationalState: "WORKING"
-  lifecycleState: "OPERATING"
+  operationalState: "NOT_WORKING"
+  lifecycleState: "PLANNING"
