DIGIHUB-61836 Added NEMO status update tests for NEL

--- a/osr-data/data/a4resourceinventory/networkElementLink/defaultNetworkElementLink.yml
+++ b/osr-data/data/a4resourceinventory/networkElementLink/defaultNetworkElementLink.yml
@@ -4,3 +4,5 @@ values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEL
   ueWegId: ""
   lbz: ""
+  operationalState: "NOT_WORKING"
+  lifecycleState: "PLANNING"
