DIGIHUB-83649 Added models and some robots for NSP A10NSP

--- a/osr-data/data/a4resourceinventory/networkserviceprofileftthaccess/defaultNetworkServiceProfileFtthAccess.yml
+++ b/osr-data/data/a4resourceinventory/networkserviceprofileftthaccess/defaultNetworkServiceProfileFtthAccess.yml
@@ -4,4 +4,5 @@ values:
   uuid: "" # if blank: field will be filled with returned uuid of created NSP
   ontSerialNumber: "" # if blank: field will be filled with returned ontSerialNumber of created NSP
   lineId: "" # if blank: field will be filled with returned lineId of created NSP
+  operationalState: "NOT_WORKING"
   lifecycleState: "PLANNING"
