--- a/osr-data/data/a4resourceinventory/terminationpoints/defaultTerminationPointA10Nsp.yml
+++ b/osr-data/data/a4resourceinventory/terminationpoints/defaultTerminationPointA10Nsp.yml
@@ -2,4 +2,4 @@ name: defaultTerminationPointA10Nsp
 template: com.tsystems.tm.acc.ta.data.osr.models.A4TerminationPoint
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created TP
-  subType: "A10NSP"
+  subType: "A10NSP_TP"
