--- a/upiter-data/data/processsearch/processesData.yml
+++ b/upiter-data/data/processsearch/processesData.yml
@@ -1,7 +1,11 @@
 name: processesData
 template: com.tsystems.tm.acc.ta.data.osr.models.Process
 values:
+  processName: "PortProvisioning"
   endSz: "49/30/179/76H2"
   slotNumber: "1"
   portNumber: "0"
-  processId: ""
+  lineId: ""
+  endTime: ""
+  duration: "Prozess ist nicht abgeschlossen"
+  state: "FAILED"
