--- a/upiter-data/data/wgFttbAccessProvisioningForDeviceData.yaml
+++ b/upiter-data/data/wgFttbAccessProvisioningForDeviceData.yaml
@@ -1,8 +1,11 @@
 ---
 name: dpuDeviceForFttbProvisioning
-template: com.tsystems.tm.acc.ta.data.osr.models.Dpu
+template: com.tsystems.tm.acc.ta.data.osr.models.DpuDevice
 values:
-  endSz: "49/30/179/71G0"
+  vpsz: "49/30/179"
+  fsz: "71G0"
+  ponConnectionWe: "8"
+  ponConnectionGe: "4"
 ---
 name: oltDeviceForFttbProvisioning
 template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
@@ -11,7 +14,3 @@ values:
   slotNumber: "1"
   portNumber: "0"
   lineIdPool: 32
-  accessLinesWG: 4
-  fttbNEProfilesActive: 4
-  defaultNetworkLineProfilesActive: 4
-  accessLinesCount: 4
