--- a/osr-data/data/dpucommissioning/DeleteANCPSessionErrorCallback.yml
+++ b/osr-data/data/dpucommissioning/DeleteANCPSessionErrorCallback.yml
@@ -3,3 +3,4 @@ template: com.tsystems.tm.acc.ta.data.osr.models.Dpu
 values:
   endSz: "49/8572/0/71GA"
   onuId: 12345678
+  gfApFolId: "1111222233334444555"
