--- a/osr-data/data/dpucommissioning/DeleteWgFTTBDeviceDeprovisioningCallbackError.yml
+++ b/osr-data/data/dpucommissioning/DeleteWgFTTBDeviceDeprovisioningCallbackError.yml
@@ -3,3 +3,4 @@ template: com.tsystems.tm.acc.ta.data.osr.models.Dpu
 values:
   endSz: "49/0005/0/71AA"
   onuId: 12345678
+  gfApFolId: "1111222233334444555"
