--- a/osr-data/data/dpucommissioning/GetAncpSession400.yml
+++ b/osr-data/data/dpucommissioning/GetAncpSession400.yml
@@ -3,3 +3,4 @@ template: com.tsystems.tm.acc.ta.data.osr.models.Dpu
 values:
   endSz: "49/8571/0/71GE"
   onuId: 12345678
+  gfApFolId: "1111222233334444555"
