DIGIHUB-85714 add psl and rebell check in installation process

--- a/osr-data/data/a4resourceinventory/networkelements/networkElementOperatingBor01.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/networkElementOperatingBor01.yml
@@ -9,5 +9,5 @@ values:
   operationalState: "WORKING"
   lifecycleState: "OPERATING"
   type: "A4-POD-BOR-v1"
-  plannedMatNr: "40318601"
+  plannedMatNr: ""
   planningDeviceName: "dmst.bor.1"
