--- a/osr-data/data/a4resourceinventory/networkelements/networkElementRetiringPodServer01.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/networkElementRetiringPodServer01.yml
@@ -3,7 +3,7 @@ template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElement
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NE
   vpsz: "49/1198/0"
-  fsz: "7KE6"
+  fsz: "7KD1"
   klsId: "1234567"
   category: "POD_SERVER"
   operationalState: "WORKING"
