--- a/osr-data/data/commissioning/EndSz_49_911_1100_76H1_MA5800.yml
+++ b/osr-data/data/commissioning/EndSz_49_911_1100_76H1_MA5800.yml
@@ -17,3 +17,6 @@ values:
   seriennummer: "unbekannt"
   firmwareVersion: "MA5800V800R016C00"
   ipAdresse: "10.182.123.196"
+  numberOfPonSlots: 1
+  numberOfEthernetSlots: 1
+  matNumber: 40247069
