--- a/osr-data/data/a10nsp/EndSz_49_30_179_76H5.yml
+++ b/osr-data/data/a10nsp/EndSz_49_30_179_76H5.yml
@@ -4,3 +4,6 @@ values:
   vpsz: "49/30/179"
   fsz: "76H5"
   bngEndsz: "49/30/179/43G2"
+  numberOfPonSlots: 1
+  numberOfEthernetSlots: 1
+  matNumber: 40247069
