--- a/upiter-data/data/olt5600.yml
+++ b/upiter-data/data/olt5600.yml
@@ -11,3 +11,6 @@ values:
   vst: "@DefaultVst"
   oltPort: "0"
   oltSlot: "19"
+  numberOfPonSlots: 1
+  numberOfEthernetSlots: 1
+  matNumber: 40247069
