--- a/upiter-data/data/ontcommissioning/A4ontReservationData.yaml
+++ b/upiter-data/data/ontcommissioning/A4ontReservationData.yaml
@@ -11,6 +11,10 @@ values:
   vst: "@DefaultVst"
   oltPort: "0"
   oltSlot: "19"
+  numberOfPonSlots: 1
+  numberOfEthernetSlots: 1
+  matNumber: 40247069
+
 ---
 name: A4port
 template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
