--- a/upiter-data/data/ontcommissioning/DGFaccessLineRegistrationData.yaml
+++ b/upiter-data/data/ontcommissioning/DGFaccessLineRegistrationData.yaml
@@ -12,6 +12,10 @@ values:
   vst: "@DefaultVst"
   oltPort: "0"
   oltSlot: "19"
+  numberOfPonSlots: 1
+  numberOfEthernetSlots: 1
+  matNumber: 40247069
+
 ---
 name: DGFAccessLineRegistration
 template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
