DIGIHUB-96062 switch berlinium tests from AppAgile to AWS

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <properties>
         <framework.version>${project.parent.version}</framework.version>
         <osr.models.version>0.0.76</osr.models.version>
-        <oc.domain.name>telitcaas3.t-internal.com</oc.domain.name>
+        <oc.domain.name>priv.cl01.gigadev.telekom.de</oc.domain.name>
         <oc.project.name>gigabit-tm-dynamic-digihub-89837</oc.project.name>
         <oc.pf.token>0yge4VAOLmqWAfSYiZLPECztSX5dD1a-uKsPkL2EFJs</oc.pf.token>
     </properties>
@@ -33,7 +33,7 @@
             </properties>
         </profile>
         <profile>
-            <id>gigabit-tm-osr-autotest-01</id>
+            <id>gigabit-tm-osr-autotest-03</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
@@ -60,7 +60,7 @@
             </properties>
         </profile>
         <profile>
-            <id>gigabit-tm-berlinium-01</id>
+            <id>gigabit-tm-berlinium-03</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
