--- a/osr-data/data/a4resourceinventory/terminationpoints/defaultTerminationPointL2Bsa.yml
+++ b/osr-data/data/a4resourceinventory/terminationpoints/defaultTerminationPointL2Bsa.yml
@@ -3,3 +3,5 @@ template: com.tsystems.tm.acc.ta.data.osr.models.A4TerminationPoint
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created TP
   subType: "L2BSA_TP"
+  carrierBsaReference: "Autotest-Carrier"
+  state: "UNUSED"
