--- a/osr-data/data/credentials/rhssoCredentialsBerlinium.yml
+++ b/osr-data/data/credentials/rhssoCredentialsBerlinium.yml
@@ -1,5 +1,7 @@
 name: RHSSOA4InventoryUi
 template: com.tsystems.tm.acc.ta.data.osr.models.Credentials
 values:
-  login: "autotest.berlinium"
-  password: "autotest.Berlinium+3"
+#  login: "autotest.berlinium"
+#  password: "autotest.Berlinium+3"
+  login: "berlinium2"
+  password: "Berlinium+2"
