--- a/osr-data/data/commissioning/EndSz_49_8571_0_76Z7_MA5600.yml
+++ b/osr-data/data/commissioning/EndSz_49_8571_0_76Z7_MA5600.yml
@@ -1,7 +1,7 @@
 name: EndSz_49_8571_0_76Z7_MA5600
 template: com.tsystems.tm.acc.ta.data.osr.models.OltDevice
 values:
-  vpsz: "49/8571/0/"
+  vpsz: "49/8571/0"
   fsz: "76Z7"
   bngEndsz: "49/911/84/7ZJE"
   bngDownlinkPort: "ge-2/1/4"
