--- a/osr-data/data/commissioning/EndSz_49_911_1100_76H1_MA5800.yml
+++ b/osr-data/data/commissioning/EndSz_49_911_1100_76H1_MA5800.yml
@@ -1,7 +1,7 @@
 name: EndSz_49_911_1100_76H1_MA5800
 template: com.tsystems.tm.acc.ta.data.osr.models.OltDevice
 values:
-  vpsz: "49/911/1100/"
+  vpsz: "49/911/1100"
   fsz: "76H1"
   bngEndsz: "49/30/179/43G1"
   bngDownlinkPort: "ge-1/2/3"
