DIGIHUB-99343 NewOltDeviceCommissioningManualProcess change device type from MA5800 to SDX-6320-16

--- a/osr-data/data/commissioning/EndSz_49_8571_0_76HE_SDX_6320_16.yml
+++ b/osr-data/data/commissioning/EndSz_49_8571_0_76HE_SDX_6320_16.yml
@@ -16,3 +16,5 @@ values:
   firmwareVersion: "SDX632V100R031C10"
   ipAdresse: "11.182.123.196"
   matNumber: 40958960
+  numberOfPonPorts: 16
+  numberOfEthernetPorts: 1
