--- a/upiter-data/data/oltprovisioning/portEmpty5800.yml
+++ b/upiter-data/data/oltprovisioning/portEmpty5800.yml
@@ -1,7 +1,21 @@
-name: portEmpty5800
+name: portEmpty5800v1
 template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
 values:
   endSz: "49/911/1100/76H1"
+  slotNumber: "1"
+  portNumber: "0"
+  homeIdPool: 32
+  lineIdPool: 32
+  accessLinesWG: 32
+  defaultNEProfilesActive: 32
+  defaultNetworkLineProfilesActive: 32
+  accessLinesCount: 32
+
+---
+name: portEmpty5800v2
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
+values:
+  endSz: "49/911/1100/76H2"
   slotNumber: "1"
   portNumber: "0"
   homeIdPool: 32
