--- a/osr-data/data/credentials/rhssoCredentialsBerlinium.yml
+++ b/osr-data/data/credentials/rhssoCredentialsBerlinium.yml
@@ -2,5 +2,5 @@ name: RHSSOA4InventoryUi
 template: com.tsystems.tm.acc.ta.data.osr.models.Credentials
 values:
   login: "autotest.berlinium"
-  password: "autotest.Berlinium+3"
+  password: "autotest.Berlinium-03"
 
