--- a/osr-data/data/a4resourceinventory/networkElementLink/defaultNetworkElementLink.yml
+++ b/osr-data/data/a4resourceinventory/networkElementLink/defaultNetworkElementLink.yml
@@ -2,7 +2,7 @@ name: defaultNetworkElementLink
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementLink
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEL
-  ueWegId: ""
-  lbz: ""
+  ueWegId: "" # if blank: field will be auto-filled
+  lbz: "" # if blank: field will be auto-filled
   operationalState: "NOT_WORKING"
   lifecycleState: "PLANNING"
