--- a/osr-data/data/a4resourceinventory/networkelements/networkElementRetiringPodServer01.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/networkElementRetiringPodServer01.yml
@@ -2,7 +2,7 @@ name: networkElementRetiringPodServer01
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElement
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NE
-  vpsz: "49/1198/0"
+  vpsz: "49/${randomLong, 1000, 9999}/0"
   fsz: "7KD1"
   klsId: "1234567"
   category: "POD_SERVER"
