--- a/upiter-data/data/ontcommissioning/ontRegistrationData.yaml
+++ b/upiter-data/data/ontcommissioning/ontRegistrationData.yaml
@@ -33,3 +33,15 @@ values:
   portNumber: "1"
   lineId: "DEU.DTAG.SQA1665380"
   homeId: "0037W5M"
+---
+name: ForDeprovisioningTrue
+template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
+values:
+  lineId: "DEU.DTAG.SQA4643677"
+  homeId: "0037WCC"
+---
+name: ForDeprovisioningFalse
+template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
+values:
+  lineId: "DEU.DTAG.SQA4935632"
+  homeId: "0037WQN"
