--- a/osr-data/data/a4resourceinventory/networkElementLink/networkElementLinkLcsInstalling.yml
+++ b/osr-data/data/a4resourceinventory/networkElementLink/networkElementLinkLcsInstalling.yml
@@ -2,7 +2,7 @@ name: networkElementLinkLcsInstalling
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementLink
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEL
-  ueWegId: "" # if blank: field will be auto-filled
-  lbz: "" # if blank: field will be auto-filled
+  ueWegId: "" # don't set! Filled automatically; you can do .getUeWegId()
+  lbz: "" # don't set! Filled automatically; you can do .getLbz()
   operationalState: "NOT_WORKING"
   lifecycleState: "INSTALLING"
