--- a/upiter-data/data/ontcommissioning/ontRegistrationData.yaml
+++ b/upiter-data/data/ontcommissioning/ontRegistrationData.yaml
@@ -11,28 +11,24 @@ values:
   serialNumber: "1234123412341234"
   newSerialNumber: "9876987698769876"
 ---
+name: PortFor33LineCase
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
+values:
+  endSz: "49/30/179/76H1"
+  slotNumber: "3"
+  portNumber: "1"
+---
 name: ForDeprovisioningOntRegistrationAccessLine1
 template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
 values:
-  oltDevice: "@EndSz_49_30_179_76H1"
-  slotNumber: "3"
-  portNumber: "1"
-  lineId: "DEU.DTAG.SQA3322830"
-  homeId: "0037W5M"
----
-name: ForDeprovisioningOntSerialNumber
-template: com.tsystems.tm.acc.ta.data.osr.models.Ont
-values:
-  serialNumber: "1234123412341234"
+  lineId: "DEU.DTAG.SQA8823841"
+  homeId: "0037F3H"
 ---
 name: ForDeprovisioningOntRegistrationAccessLine2
 template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
 values:
-  oltDevice: "@EndSz_49_30_179_76H1"
-  slotNumber: "3"
-  portNumber: "1"
-  lineId: "DEU.DTAG.SQA1665380"
-  homeId: "0037W5M"
+  lineId: "DEU.DTAG.DQA8823841"
+  homeId: "0037F3H"
 ---
 name: ForDeprovisioningTrue
 template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
