--- a/upiter-data/data/deprovisioning/portDeprovisioningAdtran.yml
+++ b/upiter-data/data/deprovisioning/portDeprovisioningAdtran.yml
@@ -1,3 +1,16 @@
+name: portDeprovisioningAdtran
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
+values:
+  endSz: "49/911/1100/76H5"
+  portNumber: "1"
+  homeIdPool: 0
+  lineIdPool: 0
+  backhaulId: 0
+  accessLinesWG: 0
+  defaultNEProfilesActive: 0
+  defaultNetworkLineProfilesActive: 0
+  accessLinesCount: 0
+---
 name: portDeprovisioningForDpuAdtran
 template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
 values:
@@ -5,6 +18,7 @@ values:
   portNumber: "1"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 0
   defaultNEProfilesActive: 0
   defaultNetworkLineProfilesActive: 0
