DIGIHUB-110179: updated FTTB test with different AccessLine types (TP and Coax)

--- a/upiter-data/data/fttbprovisioning/wgFttbAccessProvisioningForDeviceData.yaml
+++ b/upiter-data/data/fttbprovisioning/wgFttbAccessProvisioningForDeviceData.yaml
@@ -1,18 +1,42 @@
 ---
-name: dpuDeviceForFttbProvisioning
+name: dpuDeviceForFttbProvisioningTwistedPair
 template: com.tsystems.tm.acc.ta.data.osr.models.DpuDevice
 values:
   vpsz: "49/30/179"
   fsz: "71G0"
   ponConnectionWe: "8"
   ponConnectionGe: "4"
-
-
+  accessTransmissionMedium: "TWISTED_PAIR"
+  dpuLineSpectrumProfile: "17a"
+  bandwidthProfile: "500M"
+  accessType: "Gfast"
+  gfastInterfaceProfile: "PV_FF_Gfast_500M_17a"
 ---
-name: oltDeviceForFttbProvisioning
+name: oltDeviceForFttbProvisioningTwistedPair
 template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
 values:
   endSz: "49/89/8000/76H2"
+  slotNumber: "1"
+  portNumber: "0"
+  lineIdPool: 32
+---
+name: dpuDeviceForFttbProvisioningCoax
+template: com.tsystems.tm.acc.ta.data.osr.models.DpuDevice
+values:
+  vpsz: "49/30/179"
+  fsz: "71G1"
+  ponConnectionWe: "8"
+  ponConnectionGe: "4"
+  accessTransmissionMedium: "COAX"
+  dpuLineSpectrumProfile: "Coax"
+  bandwidthProfile: "1000M"
+  accessType: "GfastCX"
+  gfastInterfaceProfile: "PV_FF_Gfast_1000M_Coax"
+---
+name: oltDeviceForFttbProvisioningCoax
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
+values:
+  endSz: "49/911/1100/76H1"
   slotNumber: "1"
   portNumber: "0"
   lineIdPool: 32
