--- a/osr-data/data/credentials/rhssoCredentialsBerlinium.yml
+++ b/osr-data/data/credentials/rhssoCredentialsBerlinium.yml
@@ -3,4 +3,4 @@ template: com.tsystems.tm.acc.ta.data.osr.models.Credentials
 values:
   login: "autotest.berlinium"
   password: "autotest.Berlinium-03"
-
+#  password: "12345678Aa_"
