--- a/upiter-data/data/oltprovisioning/device5600.yml
+++ b/upiter-data/data/oltprovisioning/device5600.yml
@@ -6,6 +6,7 @@ values:
   portNumber: "0"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 16
   defaultNEProfilesActive: 16
   defaultNetworkLineProfilesActive: 16
@@ -19,6 +20,7 @@ values:
   portNumber: "2"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 32
   defaultNEProfilesActive: 32
   defaultNetworkLineProfilesActive: 32
@@ -32,6 +34,7 @@ values:
   portNumber: "3"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 16
   defaultNEProfilesActive: 16
   defaultNetworkLineProfilesActive: 16
@@ -45,6 +48,7 @@ values:
   portNumber: "0"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 32
   defaultNEProfilesActive: 32
   defaultNetworkLineProfilesActive: 32
@@ -58,6 +62,7 @@ values:
   portNumber: "7"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 16
   defaultNEProfilesActive: 16
   defaultNetworkLineProfilesActive: 16
@@ -71,6 +76,7 @@ values:
   portNumber: "0"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 16
   defaultNEProfilesActive: 16
   defaultNetworkLineProfilesActive: 16
@@ -82,6 +88,7 @@ values:
   endSz: "49/30/179/76H3"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 16
   defaultNEProfilesActive: 16
   defaultNetworkLineProfilesActive: 16
