--- a/upiter-data/data/postprovisioning/Postprovisioning16_24_32.yml
+++ b/upiter-data/data/postprovisioning/Postprovisioning16_24_32.yml
@@ -6,6 +6,7 @@ values:
   portNumber: "6"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 11
   defaultNEProfilesActive: 24
   defaultNetworkLineProfilesActive: 24
@@ -19,6 +20,7 @@ values:
   portNumber: "6"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 11
   defaultNEProfilesActive: 32
   defaultNetworkLineProfilesActive: 32
