--- a/upiter-data/data/postprovisioning/Postprovisioning16_24_32_onDemand.yml
+++ b/upiter-data/data/postprovisioning/Postprovisioning16_24_32_onDemand.yml
@@ -6,6 +6,7 @@ values:
   portNumber: "6"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 11
   defaultNEProfilesActive: 32
   defaultNetworkLineProfilesActive: 32
@@ -19,6 +20,7 @@ values:
   portNumber: "6"
   homeIdPool: 32
   lineIdPool: 33
+  backhaulId: 1
   accessLinesWG: 1
   defaultNEProfilesActive: 33
   defaultNetworkLineProfilesActive: 33
