--- a/upiter-data/data/postprovisioning/onDemandLine.yml
+++ b/upiter-data/data/postprovisioning/onDemandLine.yml
@@ -6,6 +6,7 @@ values:
   portNumber: "5"
   homeIdPool: 32
   lineIdPool: 32
+  backhaulId: 1
   accessLinesWG: 16
   defaultNEProfilesActive: 16
   defaultNetworkLineProfilesActive: 16
@@ -19,6 +20,7 @@ values:
   portNumber: "5"
   homeIdPool: 32
   lineIdPool: 33
+  backhaulId: 1
   accessLinesWG: 1
   defaultNEProfilesActive: 33
   defaultNetworkLineProfilesActive: 33
