--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <version>6.10.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>6.10.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
