--- a/upiter-data/data/networklineprofile/WBResourceOrderRequests.yaml
+++ b/upiter-data/data/networklineprofile/WBResourceOrderRequests.yaml
@@ -1,4 +1,4 @@
-name: networkLineProfileAddSuccess
+name: WBNetworkLineProfileCreation
 template: com.tsystems.tm.acc.ta.data.osr.models.NetworkLineProfileData
 values:
   resourceOrder:
@@ -30,7 +30,27 @@ values:
             - name: "RAMMINKPUPL2"
               value: "66600"
 ---
-name: accesslineForSubscriberNLPWB
+name: WBAccesslineForSubscriberNLPWB
 template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
 values:
   lineId: "DEU.GFNW.SQA0000777"
+---
+  name: WBNetworkLineProfileDeletion
+  template: com.tsystems.tm.acc.ta.data.osr.models.NetworkLineProfileData
+  values:
+    resourceOrder:
+      id: "123"
+      resourceOrderItems:
+        - id: "123"
+          action: "DELETE"
+          resource:
+            id: "123"
+            resourceCharacteristics:
+              - name: "CALID"
+                value: "DEU.GFNW.SQA0000777"
+              - name: "KLSID"
+                value: "12345"
+              - name: "AUTHMETHOD"
+                value: "1"
+              - name: "FEDERATIONPARTNER"
+                value: "t-online.de"
