DIGIHUB-116708 DpuPlanningTest extended with check of workorderId and dpuEndSz uniquness

--- a/osr-data/data/dpuplanning/ModifyDpuDemandWo.yml
+++ b/osr-data/data/dpuplanning/ModifyDpuDemandWo.yml
@@ -1,4 +1,4 @@
-name: CreateDpuDemandOnlyMandatory
+name: ModifyDpuDemandWo
 template: com.tsystems.tm.acc.ta.data.osr.models.DpuDemand
 values:
   dpuAccessTechnology: FTTB_COAX
@@ -6,3 +6,4 @@ values:
   klsId: "584741154"
   numberOfNeededDpuPorts: "15"
   state: OPEN
+  workorderId: "11636"
