--- a/osr-data/data/dpuplanning/ModifyDpuDemandStateAndEndSz.yml
+++ b/osr-data/data/dpuplanning/ModifyDpuDemandStateAndEndSz.yml
@@ -1,8 +1,9 @@
-name: CreateDpuDemandOnlyMandatory
+name: ModifyDpuDemandStateAndEndSz
 template: com.tsystems.tm.acc.ta.data.osr.models.DpuDemand
 values:
   dpuAccessTechnology: FTTB_COAX
   fiberOnLocationId: "1000000021049"
   klsId: "584741154"
   numberOfNeededDpuPorts: "15"
-  state: OPEN
+  state: FULFILLED
+  dpuEndSz: "49/670/4/88F9"
