DIGIHUB-122531:[TA][team] APM UI: search for FTTB provisioning and restore

--- a/upiter-data/data/fttbprovisioning/wgFttbAccessProvisioningForDeviceData.yaml
+++ b/upiter-data/data/fttbprovisioning/wgFttbAccessProvisioningForDeviceData.yaml
@@ -18,6 +18,16 @@ values:
   lineIdPool: 32
   backhaulId: 1
 ---
+name: oltDeviceForFailedFttbProvisioningTwistedPair
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
+values:
+  endSz: "49/89/9000/76H2"
+  slotNumber: "1"
+  portNumber: "0"
+  homeIdPool: 32
+  lineIdPool: 32
+  backhaulId: 1
+---
 name: dpuDeviceForFttbProvisioningCoax
 template: com.tsystems.tm.acc.ta.data.osr.models.DpuDevice
 values:
