--- a/upiter-data/data/processsearch/processesData.yml
+++ b/upiter-data/data/processsearch/processesData.yml
@@ -1,8 +1,17 @@
-name: processesData
+name: ftthFailedProcess
 template: com.tsystems.tm.acc.ta.data.osr.models.Process
 values:
   processName: "PortProvisioning"
   endSz: "49/30/179/76H2"
   slotNumber: "1"
   portNumber: "0"
+  lineId: ""
+---
+name: fttbFailedProcess
+template: com.tsystems.tm.acc.ta.data.osr.models.Process
+values:
+  processName: "DpuDeviceProvisioning"
+  endSz: "49/30/179/71G0"
+  slotNumber: ""
+  portNumber: ""
   lineId: ""
