DIGIHUB-120121 either the old or new testdatamanagement endpoints called depend on FEATURE_ANCP_MIGRATION_ACTIVE

--- a/osr-data/data/a10nsp/EndSz_49_30_179_76H5.yml
+++ b/osr-data/data/a10nsp/EndSz_49_30_179_76H5.yml
@@ -4,6 +4,7 @@ values:
   vpsz: "49/30/179"
   fsz: "76H5"
   bngEndsz: "49/30/179/43G2"
+  bngDownlinkPort: "ge-5/4/4"
   numberOfPonSlots: 1
   numberOfEthernetSlots: 1
   matNumber: 40247069
