DIGIHUB-123672: updated fttb provisioning autotests

--- a/upiter-data/data/fttbprovisioning/wgFttbAccessProvisioningForDeviceData.yaml
+++ b/upiter-data/data/fttbprovisioning/wgFttbAccessProvisioningForDeviceData.yaml
@@ -6,6 +6,7 @@ values:
   fsz: "71G0"
   ponConnectionWe: "8"
   ponConnectionGe: "4"
+  ponConnectionSl: "1"
   accessTransmissionMedium: "TWISTED_PAIR"
 ---
 name: oltDeviceForFttbProvisioningTwistedPair
@@ -35,6 +36,7 @@ values:
   fsz: "71G1"
   ponConnectionWe: "8"
   ponConnectionGe: "4"
+  ponConnectionSl: "1"
   accessTransmissionMedium: "COAX"
 ---
 name: oltDeviceForFttbProvisioningCoax
