DIGIHUB-118977 DpuCommissioningSDX2221 adjusted

--- a/osr-data/data/commissioning/EndSz_49_30_179_71G0_SDX2221.yml
+++ b/osr-data/data/commissioning/EndSz_49_30_179_71G0_SDX2221.yml
@@ -7,6 +7,7 @@ values:
   oltGponSlot: "3"
   oltGponPort: "3"
   bngEndsz: "49/30/179/43G2"
+  bngDownlinkPort: "ge-4/7/7"
   bezeichnung: "SDX2221-16-TP"
   hersteller: "ADTRAN"
   klsId: "12223344"
